// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`routing app routes match snapshot 1`] = `
Object {
  "component": Object {
    "$$typeof": Symbol(react.lazy),
    "_ctor": [Function],
    "_result": null,
    "_status": -1,
  },
  "exact": true,
  "name": "Root Path",
  "path": "/",
}
`;

exports[`routing app routes match snapshot 2`] = `
Object {
  "auth": true,
  "component": Object {
    "$$typeof": Symbol(react.lazy),
    "_ctor": [Function],
    "_result": null,
    "_status": -1,
  },
  "name": "Search page",
  "path": "/search",
}
`;

exports[`routing app routes match snapshot 3`] = `
Object {
  "auth": true,
  "component": Object {
    "$$typeof": Symbol(react.lazy),
    "_ctor": [Function],
    "_result": null,
    "_status": -1,
  },
  "exact": true,
  "name": "Hotel",
  "path": "/hotels/:id",
}
`;

exports[`routing app routes match snapshot 4`] = `
Object {
  "auth": true,
  "component": Object {
    "$$typeof": Symbol(react.lazy),
    "_ctor": [Function],
    "_result": null,
    "_status": -1,
  },
  "exact": true,
  "name": "Hotel",
  "path": "/hotels/:id/booking/:complete?",
}
`;

exports[`routing app routes match snapshot 5`] = `
Object {
  "component": Object {
    "$$typeof": Symbol(react.lazy),
    "_ctor": [Function],
    "_result": null,
    "_status": -1,
  },
  "name": "Login",
  "path": "/login",
}
`;

exports[`routing app routes match snapshot 6`] = `
Object {
  "auth": true,
  "component": Object {
    "$$typeof": Symbol(react.lazy),
    "_ctor": [Function],
    "_result": null,
    "_status": -1,
  },
  "ignore": true,
  "name": "Logout",
  "path": "/logout",
}
`;

exports[`routing app routes match snapshot 7`] = `
Object {
  "component": Object {
    "$$typeof": Symbol(react.lazy),
    "_ctor": [Function],
    "_result": null,
    "_status": -1,
  },
  "name": "Create Account",
  "path": "/sign-up",
}
`;

exports[`routing app routes match snapshot 8`] = `
Object {
  "component": Object {
    "$$typeof": Symbol(react.lazy),
    "_ctor": [Function],
    "_result": null,
    "_status": -1,
  },
  "exact": true,
  "name": "Password Reset",
  "path": "/password-reset",
}
`;

exports[`routing app routes match snapshot 9`] = `
Object {
  "component": Object {
    "$$typeof": Symbol(react.lazy),
    "_ctor": [Function],
    "_result": null,
    "_status": -1,
  },
  "exact": true,
  "name": "Password Reset",
  "path": "/password-reset/:token",
}
`;

exports[`routing app routes match snapshot 10`] = `
Object {
  "component": Object {
    "$$typeof": Symbol(react.lazy),
    "_ctor": [Function],
    "_result": null,
    "_status": -1,
  },
  "exact": true,
  "name": "Content Pages",
  "path": "/:pageId",
}
`;

exports[`routing app routes match snapshot 11`] = `
Object {
  "auth": true,
  "component": Object {
    "$$typeof": Symbol(react.lazy),
    "_ctor": [Function],
    "_result": null,
    "_status": -1,
  },
  "name": "Proposal page",
  "path": "/proposals/:id/:stage?",
}
`;

exports[`routing app routes match snapshot 12`] = `
Object {
  "auth": true,
  "component": Object {
    "$$typeof": Symbol(react.lazy),
    "_ctor": [Function],
    "_result": null,
    "_status": -1,
  },
  "name": "Booking Details",
  "path": "/bookings/:id/:stage?",
}
`;

exports[`routing app routes match snapshot 13`] = `
Object {
  "component": Object {
    "$$typeof": Symbol(react.lazy),
    "_ctor": [Function],
    "_result": null,
    "_status": -1,
  },
  "name": "Not Found",
}
`;
